# TestMySDK

./: .gitignore  README.md  apikey.properties  build.gradle  dmvsfdv  gradle.properties  pom.xml  settings.gradle
mySDk/: .gitignore  CMakeLists.txt  FontChangeCrawler.java  build.gradle  google-services.json  proguard-android-optimized.txt  proguard-rules.pro
mySDk/key/: private_key.pepk  you_matter.jks
mySDk/src/main/: AndroidManifest.xml
mySDk/src/main/assets/: uat.json
mySDk/src/main/res/anim/: anim_fall_down.xml  anim_pulse.xml  anim_pulse_once.xml  hra_enter_anim.xml  hra_enter_to_exit.xml  hra_exit_anim.xml  hra_exit_to_exit.xml  rotate_forward.xml  rotate_forward_finite.xml
mySDk/src/main/res/color/: hra_previous_option_selector_color.xml  selector_color.xml  selector_edit_text_color.xml  selector_text_icon_color.xml
mySDk/src/main/res/drawable/: back_arrow.xml  background_edittext_fdshp.xml  background_ll_upload_area_urshp.xml  bg_badge_progress.xml  bg_card_view.xml  bg_disabled.xml  bg_progress_bar.xml  bg_toast_primary.xml  border_button_outline_selection.xml  border_button_selected.xml  border_button_selected_blue.xml  border_button_transparant.xml  border_button_white.xml  border_button_white_ripple.xml  border_header.xml  border_header_bottom_sheet.xml  border_normal.xml  border_normal_outline.xml  border_oval_disabled.xml  border_round.xml  border_selected.xml  (+133 more)
mySDk/src/main/res/drawable-xxxhdpi/: background_recycleview_select_health_parameter.xml  chart_fill.xml  chart_fill_orange.xml  circular_progress.xml  gradient_intro.xml  gradient_login.xml  gradient_step1.xml  gradient_step2.xml  gradient_step3.xml  gradient_step4.xml  ic_bookmark_selected.xml  ic_bookmark_unselected.xml
(+1229 files in other folders)
